...
                    
                    AlertViewModel.shared.alert?.message
                        .font(.system(size: 13))
                        .foregroundColor(Color.black)
                        .multilineTextAlignment(.center)
                        .fixedSize(horizontal: false, vertical: true)
                        .accessibilityIdentifier("txt_alert_message")
                }
                .padding()
                
                Divider()
                
                HStack(spacing: 0) {
...
                        Text(AlertViewModel.shared.alert?.cancelText ?? "Cancel")
                            .font(.system(size: 17, weight: .regular))
                            .foregroundColor(Color(Asset.cancelButtonForeground.name))
                            .accessibilityIdentifier("txt_alert_cancel")
                    }
                    )
                    .accessibilityIdentifier("btn_alert_cancel")
                    .padding(.vertical)
                    .frame(maxWidth: .infinity)
                    .overlay(
                        Divider()
                            .frame(maxWidth: 1, maxHeight: .infinity), alignment: .trailing
                    )
...
                        Text(AlertViewModel.shared.alert?.submitText ?? "Submit")
                            .font(.system(size: 17, weight: .semibold))
                            .foregroundColor(Color(Asset.alertSubmitButtonForeground.name))
                            .accessibilityIdentifier("txt_alert_submit")
                    }
                    )
                    .accessibilityIdentifier("btn_alert_submit")
                    .padding(.vertical)
                    .frame(maxWidth: .infinity)
                }
            }
            .background(Color(Asset.alertModalBackground.name))
            .cornerRadius(14)
...
