...
                NavigationLink(destination: UserAccountDetailScreen()
                    .navigationBarBackButtonHidden(true)) {
                        Text(BasicHelper.getInitials(from: userStateViewModel.currentUser.name))
                            .frame(width: 30, height: 30)
                            .font(.nunitoBold( size: 9))
                            .foregroundColor(.black)
                            .accessibilityIdentifier("txt_user_account_icon")
                    }
                    .background(Color(hex: "#C5B8FA"))
                    .clipShape(Circle())
            }
            .foregroundColor(Color(Asset.textPrimary.name))
            .padding(EdgeInsets(top: 50, leading: 20, bottom: 0, trailing: 20))
...
