...
                        .clipShape(RoundedRectangle(cornerRadius: 5))
                        .padding(.top, 20)
                        
                    }
                    )
                    .disabled(loginScreenViewModel.isLoginInProgress)
                    .accessibilityIdentifier("btn_connect_salesforce")
                }
                .padding(.horizontal, 20)
                .padding(.vertical, 40)
                .background(.white)
            }
            .padding(.horizontal, 20)
...
